fix table row text alignment

--- a/src/app/components/benchmark-workload/benchmark-workload.component.scss
+++ b/src/app/components/benchmark-workload/benchmark-workload.component.scss
@@ -26,7 +26,7 @@
     tr {
       @apply hover:outline hover:outline-1 hover:-outline-offset-1 hover:outline-emerald-400;
       td {
-        @apply pl-3 pr-2 py-3 text-left text-sm align-top;
+        @apply pl-3 pr-2 py-3 text-left text-sm align-middle;
       }
     }
   }
